# Nmap Changelog ($Id$); -*-text-*-

o Fixed a bug that caused Nmap to fail to find any network interface when a
  Prism interface is in monitor mode. The fix was to define the
  ARP_HRD_IEEE80211_PRISM header identifier in the libdnet-stripped code.
  [Brad Johnson]

o [NSE] Added http-shellshock to detect web applications vulnerable to
  Shellshock (CVE2014-6271). [Paulino Calderon]

o Added a version probe for Tor. [David Fifield]

o [Zenmap] Updated translations for German (de, Chris Leick), Italian (it, Jan
  Reister), Polish (pl, Jacek Wielemborek), and French (fr, MaZ)

o [Zenmap] New Chinese-language (zh) translation from Jie Jiang.

o [NSE] Added snmp-info to get the enterprise number and other information from
  the snmpEngineID in an SNMPv3 response packet. [Daniel Miller]

o [NSE] Add support to citrix-enum-apps-xml for reporting if Citrix
   published applications in the list are enforcing/requiring the level
   of ICA/session data encryption shown in the script result.
   [Tom Sellers]

o [NSE] Added targets-ipv6-wordlist to generate target IPv6 addresses
  from a wordlist made of hexadecimal characters.  [Raúl Fuentes]

o [NSE] Added targets-ipv6-map4to6 to generate target IPv6 addresses
  which correspond to IPv4 addresses mapped within a particular IPv6 subnet.
  [Raúl Fuentes]

o [NSE] Updated our Wordpress plugin list to improve the
  http-wordpress-plugins NSE script. We can now detect 34,077 plugins,
  up from 18,570. [Danila Poyarkov]

o [NSE] Rework ssl-enum-ciphers to actually score the strength of the SSL/TLS
  handshake, including certificate key size and DH parameters if applicable.
  This is similar to Qualys's SSL Labs scanner, and means that we no longer
  maintain a list of scores per ciphersuite. [Daniel Miller]

o [NSE] Add the signature algorithm that was used to sign the target port's
  x509 certificate to the output of ssl-cert.nse [Tom Sellers]

o [NSE] Fixed a bug in the sslcert.lua library that was triggered against