@@ -4637,6 +4637,23 @@ table.insert(fingerprints, {
     }
   });
 
+-- http://carnal0wnage.attackresearch.com/2015/02/cisco-asa-version-grabber-cve-2014-3398.html
+table.insert(fingerprints, {
+    category = 'security',
+    probes = {
+      {
+        path = '/CSCOSSLC/config-auth',
+        method = 'GET'
+      },
+    },
+    matches = {
+      {
+        match = '<version who="sg">([^<]+)</version>',
+        output = 'Cisco ASA, firmware \\1'
+      },
+    }
+  });
+
 ------------------------------------------------
 ----        MANAGEMENT SOFTWARE             ----
 ------------------------------------------------
